tests/baselines/reference/augmentedTypeBracketNamedPropertyAccess.errors.txt
tests/cases/compiler/augmentedTypeBracketNamedPropertyAccess.ts(11,12): error TS2339: Property 'functionData' does not exist on type '{}'.


==== tests/cases/compiler/augmentedTypeBracketNamedPropertyAccess.ts (1 errors) ====
    interface Object {
        data: number;
    }
    interface Function {
        functionData: string;
    }
    var o = {};
    var f = function () { };
    
    var r1 = o['data']; // Should be number
    var r2 = o['functionData']; // Should be any (no property found)
               ~~~~~~~~~~~~~~
!!! error TS2339: Property 'functionData' does not exist on type '{}'.
    var r3 = f['functionData']; // Should be string
    var r4 = f['data']; // Should be number